add_library(rocksdblib
                builder.cc
                c.cc
                column_family.cc
                compaction.cc
                compaction_job.cc
                compaction_picker.cc
                dbformat.cc
                db_filesnapshot.cc
                db_impl.cc
                db_impl_debug.cc
                db_impl_readonly.cc
                db_iter.cc
                event_logger_helpers.cc
                filename.cc
                file_indexer.cc
                flush_job.cc
                flush_scheduler.cc
                forward_iterator.cc
                internal_stats.cc
                log_reader.cc
                log_writer.cc
                managed_iterator.cc
                memtable.cc
                memtable_allocator.cc
                memtable_list.cc
                merge_helper.cc
                merge_operator.cc
                repair.cc
                slice.cc
                table_cache.cc
                table_properties_collector.cc
                transaction_log_impl.cc
                version_builder.cc
                version_edit.cc
                version_set.cc
                wal_manager.cc
                write_batch.cc
                write_batch_base.cc
                write_controller.cc
                write_thread.cc
            )
